name:                heffalump
version:             0.2
license:             GPL-3
license-file:        LICENSE
author:              Udo Stenzel
maintainer:          udo.stenzel@eva.mpg.de
build-type:          Custom
cabal-version:       >=1.10

Extra-Source-Files:  man/man1/heffalump.1

executable heffalump
  main-is:             heffalump.hs
  other-modules:       Bamin,
                       Bed,
                       BcfScan,
                       Eigenstrat,
                       Emf,
                       Lump,
                       NewRef,
                       SillyStats,
                       Streaming.Lowlevel,
                       Streaming.Zip,
                       Streaming.Zlib,
                       Stretch,
                       Util,
                       Vcf,
                       VcfScan

  build-depends:       attoparsec               >= 0.10 && < 0.14,
                       base                     >= 4.7 && < 4.10,
                       base-prelude             == 1.*,
                       biohazard                >= 0.6.10 && < 0.7,
                       bytestring               >= 0.10.2 && < 0.11,
                       bytestring-mmap          == 0.2.*,
                       containers               >= 0.4.1 && < 0.6,
                       directory                >= 1.2 && < 2.0,
                       filepath                 >= 1.3 && < 2.0,
                       hashable                 == 1.2.*,
                       math-functions           == 0.2.*,
                       primitive                >= 0.5 && < 0.7,
                       random                   >= 1.0 && < 1.2,
                       resourcet                == 1.1.*,
                       streaming                >= 0.1.4 && < 2.0,
                       streaming-bytestring     >= 0.1.4 && < 2.0,
                       transformers             >= 0.4.1 && < 0.6,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   >= 0.11 && < 0.13,
                       vector-algorithms        >= 0.3 && < 1.0,
                       zlib                     == 0.6.*

  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       DeriveFunctor,
                       FlexibleContexts,
                       FlexibleInstances
                       GeneralizedNewtypeDeriving,
                       MultiParamTypeClasses,
                       NoImplicitPrelude,
                       OverloadedStrings,
                       RecordWildCards,
                       TypeFamilies

  ghc-options:         -Wall -auto-all
  cc-options:          -O3 -std=c99 -fPIC -ggdb -Wall
  c-sources:           cbits/vcf-scan.c
                       cbits/zlib-helper.c
  include-dirs:        cbits
  extra-libraries:     z
