name:                heffalump
version:             0.2
license:             GPL-3
license-file:        LICENSE
author:              Udo Stenzel
maintainer:          u.stenzel@web.de
build-type:          Custom
cabal-version:       >=1.10

Extra-Source-Files:  man/man1/heffalump.1

Flag have_mmap
  default: True

executable heffalump
  main-is:             heffalump.hs
  other-modules:       Bamin,
                       Bed,
                       BcfScan,
                       Eigenstrat,
                       Emf,
                       Genome,
                       Lump,
                       Paths_heffalump,
                       SillyStats,
                       ShameMS,
                       Stretch,
                       Treemix,
                       Util,
                       Vcf,
                       VcfOut,
                       VcfScan

  build-depends:       attoparsec               >= 0.10 && < 0.14,
                       base                     >= 4.7 && < 4.11,
                       biohazard                >= 0.6.10 && < 0.7,
                       bytestring               >= 0.10.4 && < 0.11,
                       containers               >= 0.4.1 && < 0.6,
                       directory                >= 1.2 && < 1.4,
                       filepath                 >= 1.3 && < 1.5,
                       hashable                 >= 1.0 && < 1.3,
                       math-functions           == 0.2.*,
                       primitive                >= 0.5 && < 0.7,
                       random                   >= 1.0 && < 1.2,
                       regex-posix              >= 0.95 && < 1.0,
                       resourcet                == 1.1.*,
                       streaming                >= 0.1.4 && < 2.0,
                       streaming-bytestring     >= 0.1.4 && < 2.0,
                       transformers             >= 0.4.1 && < 0.6,
                       unordered-containers     >= 0.2.3 && < 0.3,
                       vector                   >= 0.11 && < 0.13,
                       vector-algorithms        >= 0.3 && < 0.8,
                       zlib                     == 0.6.*

  if flag(have_mmap)
    build-depends:  biohazard >= 0.6.16
  else
    build-depends:  bytestring-mmap == 0.2.*

  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       DeriveFunctor,
                       FlexibleContexts,
                       FlexibleInstances
                       GeneralizedNewtypeDeriving,
                       LambdaCase,
                       MultiParamTypeClasses,
                       NoImplicitPrelude,
                       OverloadedStrings,
                       RecordWildCards,
                       TypeFamilies
  other-extensions:    CPP,
                       DeriveFoldable, 
                       DeriveTraversable,
                       ForeignFunctionInterface,
                       OverloadedLists,
                       Rank2Types,
                       ScopedTypeVariables

  ghc-options:         -Wall -fprof-auto
  cc-options:          -O3 -std=c99 -fPIC -ggdb -Wall
  hs-source-dirs:      src
  c-sources:           cbits/vcf-scan.c
  include-dirs:        cbits
  extra-libraries:     z
